Fix mobile button overflow

--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -228,6 +228,14 @@ footer {
   .main-tickets {
     width: 100%;
     padding: 0.8em 0;
+
+    &:hover {
+      transform: none;
+    }
+
+    &:active {
+      transform: none;
+    }
   }
 
   .main-title,
